color change by hour

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </header>
 
       <div id="hour-list" class="time-block">
-        <div id="time" class="row d-flex justify-content-center">
+        <div id="time09" class="row d-flex justify-content-center">
           <div class="col-1 hour text-right">9am</div>
           <textarea
             class="toDo col-8 form-control"
